# mtrack-remote

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: lib.rs  main.rs  route.rs
src/backend/: config.rs  mod.rs  osc.rs  server.rs
src/components/: config.rs  mod.rs  mtrack.rs  navbar.rs  numberinput.rs  playlist.rs  textinput.rs  transport.rs
src/views/: config.rs  mod.rs  mtrack.rs
styling/: default_theme.css  input.css
